feat: adds func edit as well as other multipurpose fixes